# HelloTorch

./: .gitignore
launch/: CMakeLists.txt  build.sh  example.cpp  mymodel_example.cpp  note  resnet_example.cpp
launch/cpp/espeak/: CMakeLists.txt  text2phoneme.cpp  text2phoneme_v1.cpp
launch/cpp/openvino/: CMakeLists.txt  a.cpp  b.cpp  char2id  char2id.cpp  infer.cpp  infer_v1.cpp  infer_v2.cpp  lib.sh  openvino_2024.4.0  process_puncs  process_puncs.cpp  utils.hpp
launch/cpp/tensorrt/: CMakeLists.txt  infer_bert.cpp  infer_tts.cpp
launch/cpp/tensorrt/infer_c/: bert_infer.h  tts_infer.h
launch/libtorch/: build-version
launch/python/: MyModel.py  short_require.txt
launch/python/compile/: MyModel.py
launch/python/configs/: config.json  speakers_ids.json
launch/python/onnx/: ConverModels.py  TTSModel.py
launch/python/onnxruntime/: infer.py  note
launch/python/openvino/: a.py  infer.py  nncf_eg.py  short_require.txt
launch/python/openvino/tts/tts_models--en--vctk--vits/: config.json  model_file.pth  speakers_ids.json
launch/python/script/: ResnetModel.py  TTSModel.py
launch/python/tensorrt/: check_model.py  infer.py  note  print_model.py
